# naive-qwen

./: Cargo.toml
src/: main.rs  qwen3.rs
