[package]
name = "burn-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["cuda"] }
burn-import = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["safetensors"] }
