[package]
name = "naive-qwen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["tch", "candle"] }
burn-import = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["safetensors"] }
tokenizers = { version = "0.21", features = [] }
chat-prompts = { git = "https://github.com/xutianyi1999/LlamaEdge.git" }
endpoints = { git = "https://github.com/xutianyi1999/LlamaEdge.git" }
